# lago

./: CLAUDE.md  Cargo.toml  README.md  deny.toml  publish.sh
.github/workflows/: ci.yml  release.yml
crates/lago-aios-eventstore-adapter/: Cargo.toml
crates/lago-aios-eventstore-adapter/src/: lib.rs
crates/lago-api/: Cargo.toml
crates/lago-api/src/: error.rs  router.rs  state.rs
crates/lago-api/src/routes/: blobs.rs  branches.rs  events.rs  files.rs  health.rs  sessions.rs
crates/lago-api/src/sse/: anthropic.rs  lago.rs  openai.rs  vercel.rs
crates/lago-api/tests/: e2e_files.rs  e2e_sessions.rs
crates/lago-cli/: Cargo.toml
crates/lago-cli/src/: client.rs  main.rs
crates/lago-cli/src/commands/: branch.rs  log.rs  session.rs
crates/lago-core/: Cargo.toml
crates/lago-core/src/: event.rs  journal.rs  lib.rs  protocol_bridge.rs  sandbox.rs
crates/lago-fs/: Cargo.toml
crates/lago-fs/src/: lib.rs
crates/lago-ingest/: Cargo.toml
crates/lago-ingest/src/: codec.rs
crates/lago-journal/src/: redb_journal.rs
crates/lago-journal/tests/: golden_replay.rs
crates/lago-policy/src/: config.rs  rule.rs
crates/lago-store/src/: blob.rs
crates/lagod/: Cargo.toml
crates/lagod/src/: config.rs  lib.rs  main.rs
docs/: README.md  architecture.md  development-guide.md
lago-api-schema/: Cargo.toml
lago-api-schema/src/: lib.rs
lago-auth/: Cargo.toml
lago-auth/src/: agent_jwt.rs  lib.rs
lago-auth/tests/: verify_jwt.rs
lago-cli/src/: main.rs
lago-cli/src/commands/: mod.rs  replay.rs
lago-knowledge/src/: event_index.rs
lago-substrate-proto/: Cargo.toml  build.rs
lago-substrate-proto/src/: lib.rs
lagod/: Cargo.toml
lagod/src/: lib.rs  substrate.rs
lagod/tests/: topology_b_e2e_lago.rs
life-lago/: Cargo.toml
life-lago/src/: lib.rs
