[package]
name = "lagod"
description = "Daemon binary for the Lago event-sourced agent runtime"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "lagod"
path = "src/main.rs"

[dependencies]
aios-protocol.workspace = true
lago-core.workspace = true
lago-journal.workspace = true
lago-store.workspace = true
lago-fs.workspace = true
lago-ingest.workspace = true
lago-api.workspace = true
lago-policy.workspace = true
lago-auth.workspace = true
lago-substrate-proto.workspace = true
clap.workspace = true
prost-types.workspace = true
serde_json.workspace = true
tokio.workspace = true
tonic.workspace = true
axum.workspace = true
toml.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
life-vigil.workspace = true
life-paths.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true

[dev-dependencies]
# BRO-1017 topology_b_e2e_lago.rs — substrate-server-under-test exercise
# against a real `LagoProxy`. lago-proxy is a `crates/life-runtime/`
# member; pulling it as a dev-only dep keeps the runtime dep tree clean.
aios-protocol.workspace = true
lago-proxy.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio-stream = { workspace = true, features = ["net"] }
tonic = "0.14"
